--- a/wp/a2/css/single_page.css
+++ b/wp/a2/css/single_page.css
@@ -10,5 +10,5 @@
 	margin: 1% auto;
 	float: left;
 	min-width: 320px;
-	width: 100%;
+	/*width: 96%;*/
 }
